--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <div class="row align-items-center">
             <div class="col-md-6 text-md-start text-center py-6">
               <h3 class="mb-4 fs-9 fw-bold">I’m Arman, a Passionate Graphic Designer</h3>
-              <p class="mb-6 lead text-secondary">Tools tutorials, design and innovation experts, all<br class="d-none d-xl-block" />in one place! The most intuitive way to imagine<br class="d-none d-xl-block" />your next user experience.</p>
-              <div class="text-center text-md-start"><a class="btn btn-warning me-3 btn-lg" href="#!" role="button">Get started</a><a class="btn btn-link text-warning fw-medium" href="#!" role="button" data-bs-toggle="modal" data-bs-target="#popupVideo"><span class="fas fa-play me-2"></span>Watch the video </a></div>
+              <p class="mb-6 lead text-secondary"><br class="d-none d-xl-block" /> I’m Arman, a graphic designer with five years of experience creating stunning social media visuals. Let’s bring your ideas to life with eye-catching designs!</p>
+              <div class="text-center text-md-start"><a class="btn btn-warning me-3 btn-lg" href="#!" role="button">Contact Me</a><a class="btn btn-link text-warning fw-medium" href="https://wa.me/8801974946747" role="button" data-bs-toggle="modal" data-bs-target="#popupVideo"><span class="fas fa-play me-2"></span>Watch the video </a></div>
             </div>
             <div class="col-md-6 text-end"><img class="pt-7 pt-md-0 img-fluid" src="assets/img/hero/hero-img.png" alt="" /></div>
           </div>
