--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
               <h4 class="fw-bold fs-1">Custom Design designers</h4>
               <p class="mb-4 fw-medium text-secondary">If you are looking for a new way to promote your business<br />that won't cost you more money,</p>
             </div>
-            <div class="col-lg-6"><img class="img-fluid" src="assets/img/marketer/marketer.png" alt="" /></div>
+            <div class="col-lg-6"><img class="img-fluid" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQr6LZ51njX-RRQQY-hMRzsIBtN_cp7rKYQQncwBEI7vPCPElvOtYnRh4k&s=10" alt="" /></div>
           </div>
         </div><!-- end of .container-->
       </section><!-- <section> close ============================-->
