--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-6 text-md-start text-center py-6">
-              <h3 class="mb-4 fs-9 fw-bold">I’m Arman, a Passionate Graphic Designer</h3>
+              <h6 class="mb-4 fs-6 fw-bold">I’m Arman, a Passionate Graphic Designer</h6>
               <p class="mb-6 lead text-secondary"><br class="d-none d-xl-block" /> I’m Arman, a graphic designer with five years of experience creating stunning social media visuals. Let’s bring your ideas to life with eye-catching designs!</p>
               <div class="text-center text-md-start"><a class="btn btn-warning me-3 btn-lg" href="https://wa.me/8801974946747" role="button">Contact Me</a><a class="btn btn-link text-warning fw-medium" href="https://wa.me/8801974946747" role="button" data-bs-toggle="modal" data-bs-target="#popupVideo"><span class="fas fa-play me-2"></span>Watch the video </a></div>
             </div>
@@ -65,18 +65,18 @@
         <div class="bg-holder z-index--1 bottom-0 d-none d-lg-block" style="background-image:url(assets/img/category/shape.png);opacity:.5;"></div>
         <!--/.bg-holder-->
         <div class="container">
-          <h1 class="fs-9 fw-bold mb-4 text-center"> We design tools to unveil <br class="d-none d-xl-block" />your superpowers</h1>
+          <h1 class="fs-9 fw-bold mb-4 text-center"> Creative & Eye-Catching Designs to Elevate Your Brand!</h1>
           <div class="row">
             <div class="col-lg-3 col-sm-6 mb-2"> <img class="mb-3 ms-n3" src="assets/img/category/icon1.png" width="75" alt="Feature" />
-              <h4 class="mb-3">First click tests</h4>
+              <h4 class="mb-3">One</h4>
               <p class="mb-0 fw-medium text-secondary">While most people enjoy casino gambling,</p>
             </div>
             <div class="col-lg-3 col-sm-6 mb-2"> <img class="mb-3 ms-n3" src="assets/img/category/icon2.png" width="75" alt="Feature" />
-              <h4 class="mb-3">Design surveys</h4>
+              <h4 class="mb-3">Two</h4>
               <p class="mb-0 fw-medium text-secondary">Sports betting,lottery and bingo playing for the fun</p>
             </div>
             <div class="col-lg-3 col-sm-6 mb-2"> <img class="mb-3 ms-n3" src="assets/img/category/icon3.png" width="75" alt="Feature" />
-              <h4 class="mb-3">Preference tests</h4>
+              <h4 class="mb-3">Please</h4>
               <p class="mb-0 fw-medium text-secondary">The Myspace page defines the individual.</p>
             </div>
             <div class="col-lg-3 col-sm-6 mb-2"> <img class="mb-3 ms-n3" src="assets/img/category/icon4.png" width="75" alt="Feature" />
